libs/config/tests/errors/ce7_missing_parent_tree/source.hpp
class a {
    class x1;
};
class b: x1 {};
